tests/knowledge/rules/aws/ensure_no_unused_security_groups_rule/emr_cluster/unused_security_group_existing/account-data/dev/us-east-1/cloudfront-list-distributions.json
{
    "DistributionList": {
        "IsTruncated": false,
        "Items": [
            {
                "ARN": "arn:aws:cloudfront::115553109071:distribution/E1DJ9AZBBEJ99P",
                "AliasICPRecordals": [
                    {
                        "CNAME": "web.dev-imanuel.internal.cloudrail.app",
                        "ICPRecordalStatus": "APPROVED"
                    }
                ],
                "Aliases": {
                    "Items": [
                        "web.dev-imanuel.internal.cloudrail.app"
                    ],
                    "Quantity": 1
                },
                "CacheBehaviors": {
                    "Quantity": 0
                },
                "Comment": "dev-imanuel environment",
                "CustomErrorResponses": {
                    "Items": [
                        {
                            "ErrorCachingMinTTL": 0,
                            "ErrorCode": 403,
                            "ResponseCode": "200",
                            "ResponsePagePath": "/index.html"
                        },
                        {
                            "ErrorCachingMinTTL": 0,
                            "ErrorCode": 404,
                            "ResponseCode": "200",
                            "ResponsePagePath": "/index.html"
                        }
                    ],
                    "Quantity": 2
                },
                "DefaultCacheBehavior": {
                    "AllowedMethods": {
                        "CachedMethods": {
                            "Items": [
                                "HEAD",
                                "GET"
                            ],
                            "Quantity": 2
                        },
                        "Items": [
                            "HEAD",
                            "DELETE",
                            "POST",
                            "GET",
                            "OPTIONS",
                            "PUT",
                            "PATCH"
                        ],
                        "Quantity": 7
                    },
                    "Compress": false,
                    "DefaultTTL": 3600,
                    "FieldLevelEncryptionId": "",
                    "ForwardedValues": {
                        "Cookies": {
                            "Forward": "none"
                        },
                        "Headers": {
                            "Quantity": 0
                        },
                        "QueryString": false,
                        "QueryStringCacheKeys": {
                            "Quantity": 0
                        }
                    },
                    "LambdaFunctionAssociations": {
                        "Items": [
                            {
                                "EventType": "origin-response",
                                "IncludeBody": false,
                                "LambdaFunctionARN": "arn:aws:lambda:us-east-1:115553109071:function:cf-edge-security-headers-dev-imanuel:4"
                            }
                        ],
                        "Quantity": 1
                    },
                    "MaxTTL": 86400,
                    "MinTTL": 0,
                    "SmoothStreaming": false,
                    "TargetOriginId": "Cloudrail-dev-imanuel-cf-S3",
                    "TrustedKeyGroups": {
                        "Enabled": false,
                        "Quantity": 0
                    },
                    "TrustedSigners": {
                        "Enabled": false,
                        "Quantity": 0
                    },
                    "ViewerProtocolPolicy": "redirect-to-https"
                },
                "DomainName": "d2b5ecmum2vyzu.cloudfront.net",
                "Enabled": true,
                "HttpVersion": "HTTP2",
                "Id": "E1DJ9AZBBEJ99P",
                "IsIPV6Enabled": false,
                "LastModifiedTime": "2021-06-10T11:56:49.029000+00:00",
                "OriginGroups": {
                    "Quantity": 0
                },
                "Origins": {
                    "Items": [
                        {
                            "ConnectionAttempts": 3,
                            "ConnectionTimeout": 10,
                            "CustomHeaders": {
                                "Quantity": 0
                            },
                            "DomainName": "cloudrail-dev-imanuel-web-app-s3.s3.amazonaws.com",
                            "Id": "Cloudrail-dev-imanuel-cf-S3",
                            "OriginPath": "",
                            "OriginShield": {
                                "Enabled": false
                            },
                            "S3OriginConfig": {
                                "OriginAccessIdentity": "origin-access-identity/cloudfront/E26YUERDFX4LWZ"
                            }
                        }
                    ],
                    "Quantity": 1
                },
                "PriceClass": "PriceClass_All",
                "Restrictions": {
                    "GeoRestriction": {
                        "Quantity": 0,
                        "RestrictionType": "none"
                    }
                },
                "Status": "Deployed",
                "ViewerCertificate": {
                    "ACMCertificateArn": "arn:aws:acm:us-east-1:115553109071:certificate/15e5bc3e-4840-4fc4-8a0d-029764392869",
                    "Certificate": "arn:aws:acm:us-east-1:115553109071:certificate/15e5bc3e-4840-4fc4-8a0d-029764392869",
                    "CertificateSource": "acm",
                    "MinimumProtocolVersion": "TLSv1.2_2019",
                    "SSLSupportMethod": "sni-only"
                },
                "WebACLId": ""
            }
        ],
        "Marker": "",
        "MaxItems": 100,
        "Quantity": 1
    }
}
