tests/knowledge/rules/aws/ensure_no_unused_security_groups_rule/emr_cluster/unused_security_group_existing/account-data/dev/us-east-1/ec2-describe-launch-templates.json
{
    "LaunchTemplates": [
        {
            "CreateTime": "2020-11-12T11:23:08+00:00",
            "CreatedBy": "arn:aws:sts::115553109071:assumed-role/AWSReservedSSO_admin_in_develop_fb314e4593b59bf2/imanuel.m@indeni.com",
            "DefaultVersionNumber": 1,
            "LatestVersionNumber": 1,
            "LaunchTemplateId": "lt-09f89cc5ac9355609",
            "LaunchTemplateName": "test-echo"
        }
    ]
}
